# RPC-Generator

./: ..gitBash.lnk  .gitignore  CppHeaderParser.py  README.md  RPC generator documentation.docx  RPC-gen.py  filetree.graphml
Test/: CMakeLists.txt  test.sh
Testdata/: arrayparametertest.h  enumtest.h  multiDimensionalArrayTest.h  multiDimensionalArrayTest.h.autosave  oneDimensionalArrayTest.h  simpletest.h
Testproject/Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp  network.cpp
Testproject/Server/: CMakeLists.txt  RPC_client.c  RPC_client.h  Server.cpp  Server.h  main.cpp  network.cpp  network.h  socket.cpp  socket.h
Testproject/SharedSocketCode/: socket.cpp  socket.h
Testprojects/: CMakeLists.txt  make.bat
Testprojects/AliceBob/: CMakeLists.txt  Description.txt
Testprojects/AliceBob/Alice/: Alice.cpp  Alice.h  Alice_to_Bob.cfg  Bob_to_Alice.cfg  CMakeLists.txt  main.cpp  network.cpp
Testprojects/AliceBob/Bob/: Alice_to_Bob.cfg  Bob.cpp  Bob.h  Bob_to_Alice.cfg  CMakeLists.txt  main.cpp  network.cpp
Testprojects/AliceBob/Project/: CMakeLists.txt
Testprojects/ClientServer/: Description.txt
Testprojects/ClientServer/Client/: CMakeLists.txt  Client.cpp  main.cpp  network.cpp  network.h  rpc_config.cfg
Testprojects/ClientServer/Project/: CMakeLists.txt
Testprojects/ClientServer/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp  network.cpp  network.h  rpc_config.cfg
Testprojects/SharedSocketCode/: socket.cpp  socket.h
Tests/: mintest.h  structtest.h
