project(TestprojectBob)
cmake_minimum_required(VERSION 2.8)

FILE(GLOB RPC_SOURCES_A2B RPC/Alice_to_Bob/src/*.c)
FILE(GLOB RPC_HEADERS_A2B RPC/Alice_to_Bob/generic_include/*.h)
FILE(GLOB RPC_HEADERS_A2B RPC/Alice_to_Bob/specific_include/*.h)
FILE(GLOB RPC_SOURCES_B2A RPC/Bob_to_Alice/src/*.c)
FILE(GLOB RPC_HEADERS_B2A RPC/Bob_to_Alice/include/*.h)

FILE(GLOB SOURCES *.c)
FILE(GLOB SOURCES *.cpp)
FILE(GLOB HEADERS *.h*)
FILE(GLOB NETWORK_HEADERS ../../SharedSocketCode/*.h*)
FILE(GLOB NETWORK_SOURCES ../../SharedSocketCode/*.c)
FILE(GLOB NETWORK_SOURCES ../../SharedSocketCode/*.cpp)

source_group(headers FILES ${HEADERS})
source_group(sources FILES ${SOURCES} ${CPPSOURCES})
source_group(RPC FILES ${RPC_SOURCES_A2B})
source_group(RPC FILES ${RPC_SOURCES_B2A})
source_group(RPC FILES ${RPC_HEADERS_A2B})
source_group(RPC FILES ${RPC_HEADERS_B2A})
source_group(network FILES ${NETWORK_HEADERS})
source_group(network FILES ${NETWORK_SOURCES})

add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES} ${RPC_HEADERS_A2B} ${RPC_HEADERS_B2A} ${RPC_SOURCES_A2B} ${RPC_SOURCES_B2A} ${NETWORK_HEADERS} ${NETWORK_SOURCES})
