cmake_minimum_required(VERSION 2.8)
PROJECT(AliceBob)

execute_process(COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/../../../RPC-gen.py ${CMAKE_CURRENT_SOURCE_DIR}/../Bob/Bob.h ${CMAKE_CURRENT_SOURCE_DIR}/../Alice RESULT_VARIABLE failure)
if(failure)
	message(FATAL_ERROR "Failed generating RPC files")
endif(failure)
execute_process(COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/../../../RPC-gen.py ${CMAKE_CURRENT_SOURCE_DIR}/../Alice/Alice.h ${CMAKE_CURRENT_SOURCE_DIR}/../Bob RESULT_VARIABLE failure)
if(failure)
	message(FATAL_ERROR "Failed generating RPC files")
endif(failure)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../Alice ${CMAKE_CURRENT_SOURCE_DIR}/../bin/Alice)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../Bob ${CMAKE_CURRENT_SOURCE_DIR}/../bin/Bob)
